# AIChatBot

./: .env.example  .gitignore  README.md  docker-compose.yml  env.example  multi_agent_rag_system_spec.md  project_structure.md  provider_adapter.md  pyproject.toml  task_invite_and_reset.md  tool_provider_adapter.md
api/: Dockerfile  check_model.py  get_info_doc.md  init_db.py  main.py  multi_agent_flow_spec.md  requirements.txt  start.sh
api/agents/base/: agent_state.py  base_agent.py
api/agents/domain/: hr_agent.py
api/alembic/: env.py
api/alembic/versions/: 02441e6d0cba_add_response_field_to_chatmessage_model.py  2500e400bcd5_add_department_tool_config_and_access_.py  376e4f661899_delete_metadata_coloumn_of_documents.py  49be068aa2de_drop_role_column_and_rename_content_to_.py  4b503e47c553_link_chat_sessions_to_users_and_tenants.py  (+8 more)
api/api/endpoints/: chat.py
api/common/: __init__.py  dataclasses.py  timezones.py  types.py
api/config/: __init__.py  config_manager.py  database.py  settings.py
api/core/: exceptions.py
api/models/: __init__.py  document.py  models.py
api/schemas/: __init__.py  document_schemas.py  query_schemas.py
api/scripts/: conftest.py  test_system.py
api/services/: __init__.py  config.py  types.py
api/tools/: calculator_tool.py  date_time_tool.py  late_minutes_tool.py  rag_tool.py  summary_tool.py  tool_registry.py  tools.py  weather_tool.py  web_search_tool.py
api/utils/: datetime_utils.py  email_utils.py  encryption_utils.py  file_processor.py  file_utils.py  jwt_utils.py  language_utils.py  logging.py  otp.py  password_utils.py  prompt_utils.py  request_utils.py
api/workflows/: __init__.py
frontend/: endpoints.md  i18n.ts  middleware.ts  next.config.js  next.config.mjs  package.json  pnpm-lock.yaml  tsconfig.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: language-selector.tsx  route-transition.tsx
frontend/hooks/: use-toast-notification.ts
frontend/lib/: api.ts  auth-context.tsx  i18n-context.tsx  i18n.ts  tenant-context.tsx  tenant-utils.ts  use-toast.ts  utils.ts
frontend/locales/: en.json  ja.json  kr.json  vi.json
frontend/src/: middleware.ts
frontend/styles/: globals.css
frontend/types/: auth.ts  index.ts
monitoring/loki/: config.yml
monitoring/prometheus/: alerts.yml  prometheus.yml
monitoring/promtail/: config.yml
tests/unit/: test_agent_sync_service.py  test_lifespan.py
utils/: __init__.py
(+219 files in other folders)
