[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-chat-bot"
version = "0.1.0"
description = "Multi-Agent RAG System"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.111.0",
    "uvicorn[standard]==0.30.1",
    "pydantic==2.7.1",
    "pydantic-settings==2.3.3",
    "langgraph==0.1.5",
    "langchain-core==0.2.5",
    "langchain==0.2.5",
    "langchain-community==0.2.5",
    "langchain-google-genai==1.0.6",
    "langchain-anthropic==0.1.15",
    "langchain-mistralai==0.1.9",
    "langchain-openai==0.1.8",
    "langchain-ollama==0.1.0",
    "asyncpg==0.28.2",
    "sqlalchemy[asyncio]==2.0.31",
    "alembic==1.13.2",
    "redis[hiredis]==5.0.4",
    "pymilvus==2.4.4",
    "sentence-transformers==2.7.0",
    "pypdf==4.2.0",
    "python-docx==1.1.2",
    "python-multipart==0.0.9",
    "unstructured[pdf]==0.14.6",
    "langchain-text-splitters==0.2.1",
    "langchain-docling==1.0.0",
    "docling==2.30.0",
    "minio==7.2.7",
    "boto3==1.34.131",
    "duckduckgo-search==6.1.7",
    "beautifulsoup4==4.12.3",
    "requests==2.32.3",
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "python-dotenv==1.0.1",
    "pytz==2024.1",
    "python-dateutil==2.9.0",
    "tenacity==8.4.2",
    "pytest==8.2.2",
    "pytest-asyncio==0.23.7",
    "httpx==0.27.0",
    "black==24.4.2",
    "isort==5.13.2",
    "structlog==24.2.0",
    "prometheus-client==0.20.0",
    "celery==5.3.4",
    "redis-py-cluster==2.1.3",
    "aiosmtplib==3.0.1",
    "jinja2==3.1.4",
    "openpyxl==3.1.2",
    "python-pptx==0.6.23",
    "markdown==3.6",
    "selenium==4.21.0",
    "lxml==5.2.2",
    "html2text==2024.2.26",
    "pillow==10.3.0",
    "pytesseract==0.3.10",
    "numpy==1.26.4",
    "pandas==2.2.2",
    "sympy==1.12.1",
    "slowapi==0.1.9",
    "aiofiles==23.2.1",
    "diskcache==5.6.3",
    "click==8.1.7",
    "rich==13.7.1",
    "typer==0.12.3",
    "cryptography==42.0.8",
    "itsdangerous==2.2.0",
    "aiohttp==3.9.5",
    "websockets==12.0",
    "marshmallow==3.21.3",
    "cerberus==1.3.5",
    "pymupdf==1.24.5",
    "pdfplumber==0.11.1",
    "spacy==3.7.5",
    "nltk==3.8.1",
    "textstat==0.7.3",
    "transitions==0.9.0",
    "statemachine==2.3.5",
    "mkdocs==1.6.0",
    "mkdocs-material==9.5.26",
]

